--- a/index.ipynb
+++ b/index.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Define two arrays A (4x2) and B (2x3) \n",
+    "# 1. Define two arrays A (4x2) and B (2x3) \n",
     "```\n",
     "A = 1402, 191 \n",
     "    1371, 821 \n",
@@ -31,6 +31,40 @@
     "B = 1, 2, 3\n",
     "    4, 5, 6\n",
     "    ```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1402  191]\n",
+      " [1371  821]\n",
+      " [ 949 1437]\n",
+      " [ 147 1448]]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[1402, 191], [1371, 821], [949, 1437], [147,1448]])\n",
+    "B = np.array([[1,2,3], [4,5,6]])\n",
+    "print(A)\n",
+    "print(B)"
    ]
   },
   {
@@ -66,6 +100,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 2)\n",
+      "(2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A.shape)\n",
+    "print(B.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
    "outputs": [
@@ -95,6 +148,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1402\n",
+      "191\n",
+      "1437\n",
+      "147\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A[0,0])\n",
+    "print(A[0,1])\n",
+    "print(A[2,1])\n",
+    "print(A[3,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
    "outputs": [
@@ -120,6 +196,35 @@
     "## 4. Write a routine to populate matrix with random data\n",
     "* Create an 3x3 numpy array with all zeros (use `np.zeros()`)\n",
     "* Access each location i,j of this matrix and fill in random values between the range 1 and 10. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0]\n",
+      " [0 0 0]\n",
+      " [0 0 0]]\n",
+      "[[7 8 2]\n",
+      " [2 0 9]\n",
+      " [6 4 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "C = np.zeros((3,3), dtype=int)\n",
+    "print(C)\n",
+    "\n",
+    "for i in range(C.shape[0]):\n",
+    "    for j in range(C.shape[1]):\n",
+    "        C[i,j] = np.random.randint(10)\n",
+    "\n",
+    "print(C)\n"
    ]
   },
   {
@@ -159,6 +264,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fill_w_random(matrix):\n",
+    "    \n",
+    "    for i in range(matrix.shape[0]):\n",
+    "        for j in range(matrix.shape[1]):\n",
+    "            matrix[i,j] = np.random.randint(1,10)\n",
+    "            \n",
+    "    return matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[13, 13,  4, 12],\n",
+       "       [11,  9,  8, 15],\n",
+       "       [15,  8, 12,  7],\n",
+       "       [ 9, 14, 15, 13]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D = np.zeros((4,4), dtype=int)\n",
+    "E = np.zeros((4,4), dtype=int)\n",
+    "\n",
+    "fill_w_random(D)\n",
+    "fill_w_random(E)\n",
+    "\n",
+    "D+E"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
    "outputs": [
@@ -191,9 +340,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -205,7 +354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
